website/src/App.css
.App {
  text-align: center;
}

.App-header {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #282c34;
  padding: 10px 20px;
  z-index: 1000;
  display: flex;
}

.navbar-items {
  display: flex;
  margin-left: auto;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navbar-item {
  margin-left: 20px;
  color: white;
  text-decoration: none;
}

.navbar-item:hover {
  text-decoration: underline;
}

nav ul {
  list-style-type: none;
  padding: 0;
}

nav ul li {
  display: inline;
  margin: 0 10px;
}

nav ul li a {
  color: white;
  text-decoration: none;
}

main {
  padding: 20px;
}

section {
  margin: 100px 0; 
}

.home-section {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 100px 0;
  flex-direction: column;
}

.memoji-container {
  flex-shrink: 0;
  width: 350px; 
  display: flex;
  justify-content: center;
  opacity: 0; 
  animation: fadeIn 1s forwards; 
  animation-delay: 3.5s; 
  margin-left: 40px;
  margin-bottom: 20px;
  margin-top: 20px;
}

.memoji {
  width: 100%;
  height: auto;
  border-radius: 20%;
  object-fit: cover;
}

.typing-animation {
  font-size: 36px; 
  white-space: nowrap;
  overflow: hidden;
  border-right: 3px solid;
  width: 20ch;
  animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite;
}

@keyframes typing {
  from { width: 0; }
  to { width: 20ch; }
}

@keyframes blink-caret {
  from, to { border-color: transparent; }
  50% { border-color: black; }
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

footer {
  background-color: #282c34;
  color: white;
  padding: 10px 20px; 
  position: fixed;
  width: 100%;
  bottom: 0;
  display: flex; 
  justify-content: center; 
  align-items: center;
  height: 25px;
}

.intro-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  text-align: center;
}

.intro-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.explore-button {
  margin-top: 40px;
  margin-bottom: 250px;
  padding: 15px 30px;
  font-size: 18px;
  cursor: pointer;
  background-color: #282c34;
  color: white;
  border: none;
  border-radius: 5px;
  transition: background-color 0.3s;
}

.explore-button:hover {
  background-color: #3c4048;
}

.intro-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
}

.intro-text {
  font-size: 1.2em;
  line-height: 1.6;
  color: #333;
  text-align: left;
  max-width: 600px;
  margin-right: 20px;
}

.social-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: 20px;
}

.social-button {
  margin: 10px 0;
  font-size: 2em;
  color: #333;
  transition: color 0.3s;
}

.social-button:hover {
  color: #0073b1;
}

.education-container {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: left;
  margin-bottom: 20px;
  max-width: 800px;
  margin: 0 auto;
}

.education-image {
  width: 350px; 
  height: auto;
  margin-right: 20px;
}

.education-description {
  font-size: 1.2em;
  line-height: 1.6;
  color: #333;
  flex: 1; 
}

.education-details {
  font-size: 0.7em;
  color: #666;
}

.courses-dropdown {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.courses-dropdown select {
  padding: 10px;
  font-size: 1em;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
  cursor: pointer;
  transition: border-color 0.3s;
}

.courses-dropdown select:hover {
  border-color: #0073b1;
}

.course-description {
  margin-top: 10px;
  font-size: 1em;
  color: #666;
  text-align: center;
  max-width: 600px;
}

.experience-container {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: left;
  margin-bottom: 40px; 
  max-width: 800px;
  margin: 0 auto;
}

.experience-image {
  width: 350px;
  height: auto;
}

.experience-image.telus {
  width: 300px; 
}

.experience-image.teamup {
  width: 200px; 
}

.experience-image.chuys {
  width: 300px; 
}

.experience-description {
  font-size: 1.2em;
  line-height: 1.6;
  color: #333;
  flex: 1; 
  margin-right: 20px;
  margin-bottom: 50px;
}

.experience-details {
  font-size: 0.7em; 
  color: #666;
}

